--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
   "prefix":"!",
-  "token":"my_bot_token",
+  "token":"kyBEcn0qU1ugtYcukmpRHCpB73DTKRR7",
   "URLParams":{},
   "guild_item_limit":5,
   "cache_limit": 10,
