--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "prefix":"!",
-  "token":"kyBEcn0qU1ugtYcukmpRHCpB73DTKRR7",
+  "token":"NzkxMjkyMjM0ODg4MjQ5Mzc0.X-NCUg.WpvTymIq3sbxa37XNY6ugFrEi_0",
   "URLParams":{},
   "guild_item_limit":5,
   "cache_limit": 10,
